# gemini-business

./: .env.example  main.py  pyproject.toml  requirements.txt
core/: config.py  register_service.py
static/js/: admin.js
templates/admin/: index.html
util/: gemini_auth_utils.py  mail_providers.py
