[project]
name = "gemini-business2api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "beautifulsoup4>=4.12.0",
    "fastapi==0.110.0",
    "httpx==0.27.0",
    "itsdangerous==2.1.2",
    "jinja2>=3.1.0",
    "pydantic==2.7.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.6",
    "pyyaml>=6.0",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "undetected-chromedriver>=3.5.5",
    "uvicorn[standard]==0.29.0",
]
